Tests/RunCMake/NinjaMultiConfig/SimpleNoCross-all-all-ninja-stderr.txt
^ninja: error: unknown target 'all:all'$
